feat(admin): Integrate API base URL and prepare for fetching data
Update CDN links in index.html to point to ESM sh CDN.
Add `vite/client` types and `API_BASE_URL` to App.tsx and AdminPage.tsx.
Modify `VideoItem` and `CollectionItem` IDs to accept `string` for database compatibility.
Prepare AdminPage.tsx for data fetching by initializing state as empty and defining `API_BASE_URL`.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     "tailwind-merge": "https://esm.sh/tailwind-merge@^3.3.1",
     "framer-motion": "https://esm.sh/framer-motion@^12.23.12",
     "clsx": "https://esm.sh/clsx@^2.1.1",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/"
   }
 }
 </script>
