--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Permanent+Marker&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- Google Adsense Script -->
+    <!-- IMPORTANT: Replace ca-pub-XXXXXXXXXXXXXXXX with your own Publisher ID from your Adsense account -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
+     crossorigin="anonymous"></script>
     <style>
       body {
         font-family: 'Roboto', sans-serif;
