feat: Add image sharing functionality
Implement the Web Share API to allow users to share generated images directly from the application. This includes sharing individual decade images and custom creations.

Also, refactor the Gemini API key initialization to be more robust and conditional, preventing errors if the API key is not set and logging a warning instead. This improves error handling and deployment flexibility.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     "clsx": "https://esm.sh/clsx@^2.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.3",
-    "vite": "https://aistudiocdn.com/vite@^7.1.7"
+    "vite": "https://aistudiocdn.com/vite@^7.1.7",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.3"
   }
 }
 </script>
