feat: Persist authentication state and improve ad loading
This commit introduces persistence for the user's authentication state to localStorage, allowing the app to remember login status across sessions.

Additionally, the Google Ad loading mechanism has been refined. A longer, more robust timeout is now used to ensure the ad container is correctly sized and rendered before attempting to display the ad, preventing common rendering errors.

The app icon has also been updated to a new SVG.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TrendSnap</title>
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23FFC107'%3E%3Cpath d='M4 4h3l2-2h6l2 2h3a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2zm8 14a5 5 0 1 0 0-10 5 5 0 0 0 0 10zm0-2a3 3 0 1 1 0-6 3 3 0 0 1 0 6z'/%3E%3C/svg%3E">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' rx='8' fill='%23FFC107' /%3E%3Cpath d='M9,10 C7.8954305,10 7,10.8954305 7,12 L7,22 C7,23.1045695 7.8954305,24 9,24 L23,24 C24.1045695,24 25,23.1045695 25,22 L25,12 C25,10.8954305 24.1045695,10 23,10 L19,10 L17.5,8 L14.5,8 L13,10 L9,10 Z M16,21 C13.2385763,21 11,18.7614237 11,16 C11,13.2385763 13.2385763,11 16,11 C18.7614237,11 21,13.2385763 21,16 C21,18.7614237 18.7614237,21 16,21 Z M16,19 C17.6568542,19 19,17.6568542 19,16 C19,14.3431458 17.6568542,13 16,13 C14.3431458,13 13,14.3431458 13,16 C13,17.6568542 14.3431458,19 16,19 Z' fill='black' /%3E%3C/svg%3E">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
